// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reopenIssue reopens an issue with an issue number 1`] = `
Array [
  Array [
    Object {
      "number": 2,
      "owner": "JasonEtco",
      "repo": "example",
      "state": "open",
    },
  ],
]
`;

exports[`reopenIssue reopens an issue with an issue string 1`] = `
Array [
  Array [
    Object {
      "number": 2,
      "owner": "JasonEtco",
      "repo": "example",
      "state": "open",
    },
  ],
]
`;

exports[`reopenIssue reopens the issue from the webhook payload 1`] = `
Array [
  Array [
    Object {
      "number": 1,
      "owner": "JasonEtco",
      "repo": "example",
      "state": "open",
    },
  ],
]
`;
